--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     </div> <!-- end of col -->
                     <div class="col-lg-6">
                         <div class="image-container">
-                            <img class="img-fluid" src="images/ss/wall.png" alt="alternative">
+                            <img class="img-fluid" src="images/ss/wall-min.png" alt="alternative">
                         </div> <!-- end of image-container -->
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
@@ -275,7 +275,7 @@
 
                                 <!-- Image Pane -->
                                 <div class="col-lg-4">
-                                    <img class="img-fluid" src="images/ss/HiShoot_20200812_051616.png" alt="alternative">
+                                    <img class="img-fluid" src="images/ss/HiShoot_20200812_051616-min.png" alt="alternative">
                                 </div>
                                 <!-- end of image pane -->
 
@@ -329,7 +329,7 @@
 
                                 <!-- Image Pane -->
                                 <div class="col-md-4">
-                                    <img class="img-fluid" src="images/ss/HiShoot_20200812_051549.png" alt="alternative">
+                                    <img class="img-fluid" src="images/ss/HiShoot_20200812_051549-min.png" alt="alternative">
                                 </div>
                                 <!-- end of image pane -->
 
@@ -363,7 +363,7 @@
 
                                 <!-- Image Pane -->
                                 <div class="col-md-4">
-                                    <img class="img-fluid" src="images/ss/HiShoot_20200812_051523.png" alt="alternative">
+                                    <img class="img-fluid" src="images/ss/HiShoot_20200812_051523-min.png" alt="alternative">
                                 </div>
                                 <!-- end of image pane -->
 
@@ -404,7 +404,7 @@
 
                                 <!-- Image Pane -->
                                 <div class="col-md-4">
-                                    <img class="img-fluid" src="images/ss/HiShoot_20200812_051608.png" alt="alternative">
+                                    <img class="img-fluid" src="images/ss/HiShoot_20200812_051608-min.png" alt="alternative">
                                 </div>
                                 <!-- end of image pane -->
 
@@ -441,7 +441,7 @@
 
                                 <!-- Image Pane -->
                                 <div class="col-md-4">
-                                    <img class="img-fluid" src="images/ss/HiShoot_20200812_051532.png" alt="alternative">
+                                    <img class="img-fluid" src="images/ss/HiShoot_20200812_051532-min.png" alt="alternative">
                                 </div>
                                 <!-- end of image pane -->
 
@@ -507,112 +507,112 @@
 
                                 <!-- Slide -->
                                 <div class="swiper-slide">
-                                    <a href="images/ss/HiShoot_20200812_051616.png" class="popup-link" data-effect="fadeIn">
-                                        <img class="img-fluid" src="images/ss/HiShoot_20200812_051616.png" alt="alternative">
+                                    <a href="images/ss/HiShoot_20200812_051616-min.png" class="popup-link" data-effect="fadeIn">
+                                        <img class="img-fluid" src="images/ss/HiShoot_20200812_051616-min.png" alt="alternative">
                                     </a>
                                 </div>
                                 <!-- end of slide -->
 
                                 <!-- Slide -->
                                 <div class="swiper-slide">
-                                    <a href="images/ss/HiShoot_20200812_051422.png" class="popup-link" data-effect="fadeIn">
-                                        <img class="img-fluid" src="images/ss/HiShoot_20200812_051422.png" alt="alternative">
+                                    <a href="images/ss/HiShoot_20200812_051422-min.png" class="popup-link" data-effect="fadeIn">
+                                        <img class="img-fluid" src="images/ss/HiShoot_20200812_051422-min.png" alt="alternative">
                                     </a>
                                 </div>
                                 <!-- end of slide -->
 
                                 <!-- Slide -->
                                 <div class="swiper-slide">
-                                    <a href="images/ss/HiShoot_20200812_051549.png" class="popup-link" data-effect="fadeIn">
-                                        <img class="img-fluid" src="images/ss/HiShoot_20200812_051549.png" alt="alternative">
+                                    <a href="images/ss/HiShoot_20200812_051549-min.png" class="popup-link" data-effect="fadeIn">
+                                        <img class="img-fluid" src="images/ss/HiShoot_20200812_051549-min.png" alt="alternative">
                                     </a>
                                 </div>
                                 <!-- end of slide -->
 
                                 <!-- Slide -->
                                 <div class="swiper-slide">
-                                    <a href="images/ss/HiShoot_20200812_051523.png" class="popup-link" data-effect="fadeIn">
-                                        <img class="img-fluid" src="images/ss/HiShoot_20200812_051523.png" alt="alternative">
+                                    <a href="images/ss/HiShoot_20200812_051523-min.png" class="popup-link" data-effect="fadeIn">
+                                        <img class="img-fluid" src="images/ss/HiShoot_20200812_051523-min.png" alt="alternative">
                                     </a>
                                 </div>
                                 <!-- end of slide -->
 
                                 <!-- Slide -->
                                 <div class="swiper-slide">
-                                    <a href="images/ss/HiShoot_20200812_051608.png" class="popup-link" data-effect="fadeIn">
-                                        <img class="img-fluid" src="images/ss/HiShoot_20200812_051608.png" alt="alternative">
+                                    <a href="images/ss/HiShoot_20200812_051608-min.png" class="popup-link" data-effect="fadeIn">
+                                        <img class="img-fluid" src="images/ss/HiShoot_20200812_051608-min.png" alt="alternative">
                                     </a>
                                 </div>
                                 <!-- end of slide -->
 
                                 <!-- Slide -->
                                 <div class="swiper-slide">
-                                    <a href="images/ss/HiShoot_20200812_051429.png" class="popup-link" data-effect="fadeIn">
-                                        <img class="img-fluid" src="images/ss/HiShoot_20200812_051429.png" alt="alternative">
+                                    <a href="images/ss/HiShoot_20200812_051429-min.png" class="popup-link" data-effect="fadeIn">
+                                        <img class="img-fluid" src="images/ss/HiShoot_20200812_051429-min.png" alt="alternative">
                                     </a>
                                 </div>
                                 <!-- end of slide -->
 
                                 <!-- Slide -->
                                 <div class="swiper-slide">
-                                    <a href="images/ss/HiShoot_20200812_051532.png" class="popup-link" data-effect="fadeIn">
-                                        <img class="img-fluid" src="images/ss/HiShoot_20200812_051532.png" alt="alternative">
+                                    <a href="images/ss/HiShoot_20200812_051532-min.png" class="popup-link" data-effect="fadeIn">
+                                        <img class="img-fluid" src="images/ss/HiShoot_20200812_051532-min.png" alt="alternative">
                                     </a>
                                 </div>
                                 <!-- end of slide -->
 
                                 <!-- Slide -->
                                 <div class="swiper-slide">
-                                    <a href="images/ss/HiShoot_20200812_051443.png" class="popup-link" data-effect="fadeIn">
-                                        <img class="img-fluid" src="images/ss/HiShoot_20200812_051443.png" alt="alternative">
+                                    <a href="images/ss/HiShoot_20200812_051443-min.png" class="popup-link" data-effect="fadeIn">
+                                        <img class="img-fluid" src="images/ss/HiShoot_20200812_051443-min.png" alt="alternative">
                                     </a>
                                 </div>
                                 <!-- end of slide -->
 
                                 <!-- Slide -->
                                 <div class="swiper-slide">
-                                    <a href="images/ss/HiShoot_20200812_055409.png" class="popup-link" data-effect="fadeIn">
-                                        <img class="img-fluid" src="images/ss/HiShoot_20200812_055409.png" alt="alternative">
+                                    <a href="images/ss/HiShoot_20200812_055409-min.png" class="popup-link" data-effect="fadeIn">
+                                        <img class="img-fluid" src="images/ss/HiShoot_20200812_055409-min.png" alt="alternative">
                                     </a>
                                 </div>
                                 <!-- end of slide -->
 
                                 <!-- Slide -->
                                 <div class="swiper-slide">
-                                    <a href="images/ss/HiShoot_20200812_051459.png" class="popup-link" data-effect="fadeIn">
-                                        <img class="img-fluid" src="images/ss/HiShoot_20200812_051459.png" alt="alternative">
+                                    <a href="images/ss/HiShoot_20200812_051459-min.png" class="popup-link" data-effect="fadeIn">
+                                        <img class="img-fluid" src="images/ss/HiShoot_20200812_051459-min.png" alt="alternative">
                                     </a>
                                 </div>
                                 <!-- end of slide -->
 
                                 <!-- Slide -->
                                 <div class="swiper-slide">
-                                    <a href="images/ss/HiShoot_20200812_051506.png" class="popup-link" data-effect="fadeIn">
-                                        <img class="img-fluid" src="images/ss/HiShoot_20200812_051506.png" alt="alternative">
+                                    <a href="images/ss/HiShoot_20200812_051506-min.png" class="popup-link" data-effect="fadeIn">
+                                        <img class="img-fluid" src="images/ss/HiShoot_20200812_051506-min.png" alt="alternative">
                                     </a>
                                 </div>
                                 <!-- end of slide -->
 
                                 <!-- Slide -->
                                 <div class="swiper-slide">
-                                    <a href="images/ss/HiShoot_20200812_051515.png" class="popup-link" data-effect="fadeIn">
-                                        <img class="img-fluid" src="images/ss/HiShoot_20200812_051515.png" alt="alternative">
+                                    <a href="images/ss/HiShoot_20200812_051515-min.png" class="popup-link" data-effect="fadeIn">
+                                        <img class="img-fluid" src="images/ss/HiShoot_20200812_051515-min.png" alt="alternative">
                                     </a>
                                 </div>
                                 <!-- end of slide -->
 
                                 <!-- Slide -->
                                 <div class="swiper-slide">
-                                    <a href="images/ss/HiShoot_20200812_051541.png" class="popup-link" data-effect="fadeIn">
-                                        <img class="img-fluid" src="images/ss/HiShoot_20200812_051541.png" alt="alternative">
+                                    <a href="images/ss/HiShoot_20200812_051541-min.png" class="popup-link" data-effect="fadeIn">
+                                        <img class="img-fluid" src="images/ss/HiShoot_20200812_051541-min.png" alt="alternative">
                                     </a>
                                 </div>
                                 <!-- end of slide -->
 
                                 <!-- Slide -->
                                 <div class="swiper-slide">
-                                    <a href="images/ss/HiShoot_20200812_051600.png" class="popup-link" data-effect="fadeIn">
-                                        <img class="img-fluid" src="images/ss/HiShoot_20200812_051600.png" alt="alternative">
+                                    <a href="images/ss/HiShoot_20200812_051600-min.png" class="popup-link" data-effect="fadeIn">
+                                        <img class="img-fluid" src="images/ss/HiShoot_20200812_051600-min.png" alt="alternative">
                                     </a>
                                 </div>
                                 <!-- end of slide -->
